src/objects/TR1__Message__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Attributes__c</fullName>
        <description>Stores the JSON format of Email</description>
        <label>Attributes</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__BCCIds__c</fullName>
        <label>BCC Ids</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__BCC__c</fullName>
        <description>Stores the List of Recipients in BCC</description>
        <label>BCC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Body__c</fullName>
        <description>Stores the Body of Email</description>
        <label>Body</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TR1__CCIds__c</fullName>
        <label>CC Ids</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__CC__c</fullName>
        <description>Stores the List of Recipients in CC</description>
        <label>CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Call_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call List</label>
        <referenceTo>TR1__Call_List__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Email_Field__c</fullName>
        <formula>IF(!ISBLANK(TR1__Call_List__c) ,
IF(!ISBLANK(TEXT(TR1__Call_List__r.TR1__Call_List_Email_Field__c)),TEXT(TR1__Call_List__r.TR1__Call_List_Email_Field__c),
IF(TR1__Call_List__r.RecordType.Name == &apos;Standard&apos;, IF(!ISBLANK($Setup.TR1__TalentRoverProperties__c.TR1__Standard_Call_List_Email_Field__c),
$Setup.TR1__TalentRoverProperties__c.TR1__Standard_Call_List_Email_Field__c,&apos;Email&apos;),
IF(!ISBLANK($Setup.TR1__TalentRoverProperties__c.TR1__Candidate_Mktg_Call_List_Email_Field__c),$Setup.TR1__TalentRoverProperties__c.TR1__Candidate_Mktg_Call_List_Email_Field__c,&apos;Email&apos;))),
(IF(ISBLANK($Setup.TR1__TalentRoverProperties__c.TR1__Job_Manager_Submittal_Email_Field__c),&apos;Email&apos;,$Setup.TR1__TalentRoverProperties__c.TR1__Job_Manager_Submittal_Email_Field__c)
)
)</formula>
        <label>Email Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Sent_On__c</fullName>
        <description>Stores the Date/Time stamp when Email is sent</description>
        <label>Sent On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Status_Message__c</fullName>
        <label>Status Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Subject__c</fullName>
        <description>Stores the Subject of Email</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Template_ID__c</fullName>
        <description>Stores the Template ID of Email</description>
        <label>Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ToIds__c</fullName>
        <label>To Ids</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__To__c</fullName>
        <description>Stores the List of Recipients in TO</description>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Email</fullName>
                    <default>true</default>
                    <label>Single Email</label>
                </value>
                <value>
                    <fullName>Mass Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Message</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Msg-{00000}</displayFormat>
        <label>Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>